[package]
name = "webhook-rs-tester2"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
